# WarsawRealEstateClustering

./: .gitignore  LICENCE  README.md  lint_all.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: dependencies-check.yml  python-lint.yml
config/: __init__.py  logging_config.py  settings.py
output/maps/: cluster_map.html  district_prices.html
output/reports/: report.html  summary.txt
src/: __init__.py
src/analysis/: __init__.py  clustering.py  optimizer.py  statistics.py
src/boundaries/: __init__.py  district_fetcher.py
src/data_collection/: __init__.py  synthetic_generator.py
src/data_processing/: __init__.py  cleaner.py  transformer.py
src/visualization/: __init__.py  map_creator.py  plot_creator.py  report_generator.py
