[project]
name = "warsaw-real-estate-clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium>=0.12.0",
    "geopandas>=0.10.0",
    "matplotlib>=3.4.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pyproj>=3.2.0",
    "requests>=2.26.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "seaborn>=0.13.2",
    "shapely>=1.8.0",
]
