[project]
name = "warsaw-real-estate-clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bandit>=1.9.2",
    "black>=23.0.0",
    "invoke>=2.2.1",
    "isort>=7.0.0",
    "mypy>=1.5.0",
    "ruff>=0.14.7",
    "folium>=0.12.0",
    "geopandas>=0.10.0",
    "matplotlib>=3.4.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pandas-stubs>=2.3.2.250926",
    "pyproj>=3.2.0",
    "requests>=2.26.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "shapely>=1.8.0",
    "types-requests>=2.32.4.20250913",
]


[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Ignore missing stubs for specific libraries
[[tool.mypy.overrides]]
module = [
    "shapely.*",
    "geopandas.*",
    "sklearn.*",
    "scipy.*"
]
ignore_missing_imports = true


[tool.ruff.lint.per-file-ignores]
# Ignore F401 (unused import) and F403 (star import) ONLY in __init__.py files
"__init__.py" = ["F401", "F403"]
